force-app/main/default/objects/TDC_EC__Email_Schedule__c/TDC_EC__Email_Schedule__c.object-meta.xml
<CustomObject>
    <description>This object is to store the data for scheduling.</description>
    <label>Email Schedule</label>
    <nameField>
        <label>Source</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>