force-app/main/default/objects/TDC_EC__Email_Schedule__c/fields/TDC_EC__Attached_Files__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Attached_Files__c</fullName>
    <formula>IF(
    OR(
        ISBLANK(TDC_EC__Files_Ids__c),
        LEFT(TDC_EC__Files_Ids__c, 3) = &apos;069&apos;
    ),
    HYPERLINK(
        &apos;/sfc/servlet.shepherd/document/download/&apos; + LEFT(TDC_EC__Files_Ids__c, 18) + &apos;?operationContext=S&apos;,
        IMAGE(
            &apos;/resource/tdc_ec__Lightning_Resource/icons/doctype/&apos; + RIGHT(LEFT(TDC_EC__Files_Ids__c, 31), 12),
            &apos;&apos;
        )
    ),
    HYPERLINK(
        &apos;/servlet/servlet.FileDownload?file=&apos; + LEFT(TDC_EC__Files_Ids__c, 18),
        IMAGE(
            &apos;/resource/tdc_ec__Lightning_Resource/icons/doctype/&apos; + RIGHT(LEFT(TDC_EC__Files_Ids__c, 31), 12),
            &apos;&apos;
        )
    )
) &amp; &quot; &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attached Files</label>
    <type>Text</type>
</CustomField>