force-app/main/default/objects/TDC_EC__Email_Schedule__c/fields/TDC_EC__Contact__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores the related object&apos;s value of the email schedule.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Email Schedules</relationshipLabel>
    <relationshipName>Email_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>