force-app/main/default/objects/TDC_EC__Email_Schedule__c/fields/TDC_EC__End_Date__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__End_Date__c</fullName>
    <description>This field is used to store end date for the scheduled email.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>