force-app/main/default/objects/TDC_EC__Email_Schedule__c/fields/TDC_EC__Files_Ids__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Files_Ids__c</fullName>
    <label>Files Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>