force-app/main/default/objects/TDC_EC__Email_Schedule__c/fields/TDC_EC__From_Email__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__From_Email__c</fullName>
    <description>It holds sender&apos;s Email address</description>
    <label>From Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>