force-app/main/default/objects/TDC_EC__Email_Schedule__c/fields/TDC_EC__IsSent__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__IsSent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This value is checked when a scheduled email is sent.</description>
    <label>IsSent</label>
    <type>Checkbox</type>
</CustomField>