force-app/main/default/objects/TDC_EC__Email_Schedule__c/fields/TDC_EC__Lead__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores the related object&apos;s value of the email schedule.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Email Schedules</relationshipLabel>
    <relationshipName>Email_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>