force-app/main/default/objects/TDC_EC__Email_Schedule__c/fields/TDC_EC__Message_Type__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Message_Type__c</fullName>
    <description>This field is used to store the message type of the email.</description>
    <label>Message Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>