force-app/main/default/objects/TDC_EC__Email_Schedule__c/fields/TDC_EC__Next_Schedule_Time__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Next_Schedule_Time__c</fullName>
    <description>This field stores the date and time when the email is scheduled to send next.</description>
    <label>Next Schedule Time</label>
    <type>DateTime</type>
</CustomField>