force-app/main/default/objects/TDC_EC__Email_Schedule__c/fields/TDC_EC__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Object_Name__c</fullName>
    <description>This field is used to store the related record&apos;s object name.</description>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>