force-app/main/default/objects/TDC_EC__Email_Schedule__c/fields/TDC_EC__Related_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Related_Object_Id__c</fullName>
    <label>Related Object Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>