force-app/main/default/objects/TDC_EC__Email_Schedule__c/fields/TDC_EC__Schedule_Frequency__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Schedule_Frequency__c</fullName>
    <description>This field stores the frequency of the schedule time</description>
    <label>Schedule Frequency</label>
    <length>30</length>
    <type>Text</type>
</CustomField>