force-app/main/default/objects/TDC_EC__Email_Schedule__c/fields/TDC_EC__Schedule_Time__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Schedule_Time__c</fullName>
    <description>This field contains the date and time at which the email is scheduled to send.</description>
    <label>Schedule Time</label>
    <type>DateTime</type>
</CustomField>