force-app/main/default/objects/TDC_EC__Email_Schedule__c/fields/TDC_EC__Subject__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__Subject__c</fullName>
    <description>This field is used to store the subject of the email.</description>
    <label>Subject</label>
    <type>TextArea</type>
</CustomField>