force-app/main/default/objects/TDC_EC__Email_Schedule__c/fields/TDC_EC__To_Email__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__To_Email__c</fullName>
    <description>This field holds the information of all to email addresses</description>
    <label>To Email</label>
    <type>Email</type>
</CustomField>