force-app/main/default/objects/TDC_EC__Email_Schedule__c/fields/TDC_EC__To_Email_Api__c.field-meta.xml
<CustomField>
    <fullName>TDC_EC__To_Email_Api__c</fullName>
    <description>This field holds the information of all to email addresses</description>
    <label>To Email Api</label>
    <length>255</length>
    <type>Text</type>
</CustomField>