force-app/main/default/objects/TDC_EC__Email_Schedule__c/listViews/TDC_EC__All.listView-meta.xml
<ListView>
    <fullName>TDC_EC__All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>TDC_EC__From_Email__c</columns>
    <columns>TDC_EC__Subject__c</columns>
    <columns>NAME</columns>
    <columns>TDC_EC__Schedule_Frequency__c</columns>
    <columns>TDC_EC__Schedule_Time__c</columns>
    <columns>TDC_EC__Next_Schedule_Time__c</columns>
    <columns>TDC_EC__End_Date__c</columns>
    <columns>TDC_EC__IsSent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>